--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-DB_URI = mongodb+srv://testboy:whatsnew@cluster0.meoke.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_URI = mongodb+srv://testboy:whatsnew@cluster0.meoke.mongodb.net/WhatsNewDB?retryWrites=true&w=majority
